@@ -1,20 +1,11 @@
 package ru.job4j.collection;
 
-import java.lang.reflect.Array;
-import java.util.Arrays;
-import java.util.HashSet;
+import java.util.Set;
 
 public class UniqueText {
 
     public static boolean isEquals(String originText, String duplicateText) {
-        String[] origin = originText.split(" ");
-        String[] text = duplicateText.split(" ");
-        HashSet<String> check = new HashSet<>(Arrays.asList(origin));
-        for (String word : text) {
-            if (!check.contains(word)) {
-                return false;
-            }
-        }
-        return true;
+        return Set.of(originText.split(" "))
+                .containsAll(Set.of(duplicateText.split(" ")));
     }
 }
